--- a/api/package.json
+++ b/api/package.json
@@ -16,10 +16,12 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1"
   }
 }
