--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.4.3",
     "axios": "^1.6.0",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
